# laplacian_challenge

./: .gitmodules  LICENSE  README.md
.github/workflows/: cpp-ci.yaml  python-ci.yaml
cpp/: .gitignore  CMakeLists.txt  run_all.sh
cpp/src/kokkos_impl/: laplacian.h  run.cpp  run.h
cpp/src/native_impl/: laplacian.h  run.cpp  run.h
cpp/tests/: CMakeLists.txt  test_kokkos.cpp  test_kokkos_utils.h  test_native.cpp  test_native_utils.h
python/: .gitignore  pyproject.toml  run.py
python/src/numba_impl/: laplacian.py
python/src/numpy_impl/: laplacian.py
python/src/taichi_impl/: laplacian.py
python/tests/: test_laplacians.py  test_utils.py
src/cpp/: .gitignore  CMakeLists.txt  run_all.sh
src/cpp/kokkos/: laplacian.h  run.cpp
src/cpp/native/: laplacian.h  run.cpp  run.h
src/python/: .gitignore  pyproject.toml  run.py
